feat: port library to Java 8
Replaces Java 9+ features with Java 8 equivalents across all modules
(core, windows, linux, macos, examples) so the library can be used on
older Minecraft versions (1.7.10+) that ship with Java 8.

Changes:
- build.gradle.kts: VERSION_16 -> VERSION_1_8 in all 6 modules
- Records -> final classes with explicit constructor/accessors/equals
  (PlatformSupport, TransportCapabilities, WindowsMediaSession.Snapshot,
  MacOsPerlAdapter.{BundledAdapterAssets,Snapshot},
  MacOsPerlMediaSession.Snapshot, SwingNowPlayingExample.UiSnapshot)
- Switch expressions -> classic switch statements
  (WindowsMediaTransportControls, MacOsPerlMediaSession,
  MediaControlCliExample)
- Pattern-matching instanceof -> classic instanceof + cast
  (11 sites across LinuxMediaTransportControls, LinuxMediaSession,
  LinuxNowPlaying, MprisMetadataUtils)
- Stream.toList() -> collect(Collectors.toList())
- List.of / Map.of -> Collections.singletonList/singletonMap/emptyList
- Optional.isEmpty() -> !isPresent()
- Optional.or(Supplier) -> if/return fallback
- Optional.orElseThrow() -> orElseThrow(AssertionError::new)
- String.isBlank() -> trim().isEmpty()
- Path.of() -> Paths.get()
- Files.readString() -> new String(Files.readAllBytes(), UTF_8)
- InputStream.readAllBytes() -> manual ByteArrayOutputStream copy